--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "files.associations": {
         "iostream": "cpp",
         "thread": "cpp",
-        "*.tcc": "cpp"
-    }
+        "*.tcc": "cpp",
+        "cmath": "cpp",
+        "array": "cpp",
+        "new": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Enabled"
 }
